Implement data store for user options per session and refactor some abilities to toggle between mechanics, organize collider code

--- a/src/main/resources/bending_en.properties
+++ b/src/main/resources/bending_en.properties
@@ -88,7 +88,7 @@ bending.ability.airblade.description=Create a blade of air that travels in a str
 bending.ability.airblade.instructions=Hold sneak to create an expanding blade of air. Release sneak to launch the blade in its original direction. If you are using AirWheel you can tap sneak to dismount it and launch the wheel forward as an AirBlade.
 bending.ability.airblade.death={0} was struck by {1}''s {2}
 bending.ability.airblast.description=AirBlast is the most fundamental bending technique of an airbender. It allows you to launch any entity in its path. It also has various utility applications as it can extinguish fire or a burning entity and cool lava.
-bending.ability.airblast.instructions=Left click in a direction to create a powerful gust of wind. Tapping sneak will change the origin point of your next AirBlast to your targeted location. Holding sneak while launching will reverse its travel direction essentially pulling instead of pushing.
+bending.ability.airblast.instructions=Left click in a direction to create a powerful gust of wind. Tapping sneak will change the origin point of your next AirBlast to your targeted location. Right click to toggle between pulling and pushing.
 bending.ability.airbreath.description=AirBreath allows an airbender to forcefully exhale a gust of wind that knocks enemies back and has the potential to extinguish fire and cool lava.
 bending.ability.airbreath.instructions=Hold sneak to release a strong breath of wind.
 bending.ability.airburst.description=AirBurst is a utility ability that allows an airbender to create space between them and whoever is close to them. It can be particularly useful when you are surrounded by enemies, or if you are low in health and need to escape.
@@ -126,7 +126,7 @@ bending.ability.earthglove.description=EarthGlove is a versatile technique maste
 bending.ability.earthglove.instructions= Click to launch your glove in a direction. If you hold sneak, the glove will attempt to grab nearby entities, restricting them and bring them back to you. Tap sneak at an enemy''s glove to destroy it.
 bending.ability.earthglove.death={1} punched {0} in the face using {2}
 bending.ability.earthline.description=EarthLine is an advanced earthbending technique with both offensive and utility applications. You can deal damage and knockback to your targets or you can imprison them and restrict their movement.
-bending.ability.earthline.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch a ground line towards your target. Hold sneak to control the flow of the line. You can right click a block at any point to make your EarthLine imprison your target instead. If you selected a lavabendable source, you will launch a MagmaLine instead which travels in a straight path and destroys any wall in its path.
+bending.ability.earthline.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch a ground line towards your target. Hold sneak to control the flow of the line. If you selected a lavabendable source, you will launch a MagmaLine instead which travels in a straight path and destroys any wall in its path.
 bending.ability.earthline.death={0} was annihilated by {1}''s {2}
 bending.ability.earthshot.description=EarthShot is an offensive earth projectile ability.
 bending.ability.earthshot.instructions=Tap sneak while looking at a nearby earthbendable source to select it. If you are a lavabender you can melt the raised earth source into magma to create a more powerful projectile. Left click to launch your projectile in a trajectory (you can hold sneak to slightly curve it).
@@ -174,8 +174,8 @@ bending.ability.firewall.instructions=Left click to create a wall of fire that d
 bending.ability.firewall.death={0} run into {1}''s {2}
 bending.ability.flamerush.description=Flamerush is an advanced firebending technique that allows a skilled bender to merge two separate streams of fire into a single powerful attack.
 bending.ability.flamerush.instructions=Hold sneak to charge and release to create a dual fire stream. When smoke particles appear the move is fully charged.
-bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it it capable of melting snow and cooking food.
-bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage.
+bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it is capable of illuminating dark areas, melting snow and even cooking food!
+bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage. Right click to toggle the light source.
 bending.ability.lightning.description=Lightning is an extremely powerful technique that was originally reserved for members of the Royal family. It allows the firebender to create an arc of electricity that flows towards the target, exploding on impact! If your target is in water the arc will be even deadlier!
 bending.ability.lightning.instructions=Hold sneak to generate lightning arcs until particles appear. Release to discharge and strike the targeted location. Be careful though, the enemy can redirect your lightning back at you! If you keep charging for too long, you will also get electrocuted.
 bending.ability.lightning.death={0} was deep fried by {1}''s {2}
@@ -187,7 +187,7 @@ bending.ability.iceberg.description=Given a large enough source of water or ice,
 bending.ability.watergimbal.description=This ability creates two spinning rings of water around the waterbender''s body, which can be used as a defensive tool or for an offensive attack.
 bending.ability.watergimbal.death={0} was washed away by {1}''s {2}
 bending.ability.healingwaters.description=HealingWaters is an advanced waterbender technique that allows the bender to heal themselves or others from the damage they have taken.
-bending.ability.healingwaters.instructions=Hold sneak to begin healing yourself. Right click while sneaking to begin healing another entity. For this ability to work, you or the target must be in water or you need to have water bottles in your inventory.
+bending.ability.healingwaters.instructions=Hold sneak to begin healing your target. Right click to toggle between healing yourself and others. For this ability to work, you or the target must be in water or you need to have water bottles in your inventory.
 bending.ability.icecrawl.description=IceCrawl is a basic yet fundamental icebending technique. It allows the waterbender to freeze the target''s feet restricting their movement and dealing some damage.
 bending.ability.icecrawl.instructions=Tap sneak while looking at a nearby water or ice source to select it. Left click to launch a narrow line of ice towards your target.
 bending.ability.icecrawl.death={0} was frozen to death by {1}''s {2}
