--- a/bending-paper/src/main/resources/bending_en.properties
+++ b/bending-paper/src/main/resources/bending_en.properties
@@ -59,8 +59,7 @@ bending.gui.elements.add=Shift-left click to add
 bending.gui.elements.remove=Shift-right click to remove
 # Activation methods
 bending.activation.passive=Passive
-bending.activation.attack=Click
-bending.activation.attack-entity=Click Entity
+bending.activation.attack=Attack
 bending.activation.interact=Right Click Air
 bending.activation.interact-entity=Right Click Entity
 bending.activation.interact-block=Right Click Block
