Move some strings to properties file

--- a/bending-paper/src/main/resources/bending_en.properties
+++ b/bending-paper/src/main/resources/bending_en.properties
@@ -4,6 +4,7 @@ bending.command.preset.list-not-found=No presets found
 bending.command.preset.list.header=Available presets:
 bending.command.preset.invalid-name=Invalid preset name, only alphanumeric characters are supported
 bending.command.preset.create-empty=You can''t create an empty preset
+bending.command.preset.hover=Click to bind this preset.
 bending.command.preset.create-success=Successfully created preset {0}
 bending.command.preset.create-exists=Preset {0} already exists
 bending.command.preset.create-cancelled=Creation of preset {0} was cancelled
@@ -17,6 +18,7 @@ bending.command.modifier.clear=Cleared attribute modifiers for {0}
 bending.command.toggle.on=Your bending has been toggled on
 bending.command.toggle.off=Your bending has been toggled off
 bending.command.reload=Bending has been reloaded
+bending.command.element.toast-notification=You can now bend {0}
 bending.command.element.choose-no-permission=You don''t have permission to choose the element of {0}
 bending.command.element.choose-success=Your bending was set to the element of {0}
 bending.command.element.choose-fail=Failed to choose the element of {0}
@@ -33,6 +35,7 @@ bending.command.display.abilities-not-found=No abilities found for {0}
 bending.command.display.abilities=Abilities:
 bending.command.display.sequences=Sequences:
 bending.command.display.passives=Passives:
+bending.command.display.ability-hover=Click to view info about a specific ability.
 bending.command.bind.require-element={0} requires the element of {1}
 bending.command.bind.success=Successfully bound {0} to slot {1}
 bending.command.bind.fail={0} cannot be bound to a slot
