Various changes: Added api for multi updatables and wrapping states Improved Fracture and FragileStructure api for more flexibility Reworked EarthLine's magma feature into a new LavaFlux ability Added more ability interactions Added more unique death messages Cleaned up TempBlock code a little

--- a/bending-paper/src/main/resources/bending_en.properties
+++ b/bending-paper/src/main/resources/bending_en.properties
@@ -130,7 +130,7 @@ bending.ability.earthglove.description=EarthGlove is a versatile technique maste
 bending.ability.earthglove.instructions= Click to launch your glove in a direction. If you hold sneak, the glove will attempt to grab nearby entities, restricting them and bring them back to you. Tap sneak at an enemy''s glove to destroy it.
 bending.ability.earthglove.death={1} punched {0} in the face using {2}
 bending.ability.earthline.description=EarthLine is an advanced earthbending technique with both offensive and utility applications. You can deal damage and knockback to your targets, or you can imprison them and restrict their movement.
-bending.ability.earthline.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch a ground line towards your target. Hold sneak to control the flow of the line. If you selected a lavabendable source, you will launch a MagmaLine instead which travels in a straight path and destroys any wall in its path.
+bending.ability.earthline.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch a ground line towards your target. Hold sneak to control the flow of the line.
 bending.ability.earthline.death={0} was annihilated by {1}''s {2}
 bending.ability.earthshot.description=EarthShot is an offensive earth projectile ability.
 bending.ability.earthshot.instructions=Tap sneak while looking at a nearby earthbendable source to select it. If you are a lavabender you can melt the raised earth source into magma to create a more powerful projectile. Left click to launch your projectile in a trajectory (you can hold sneak to slightly curve it).
@@ -145,6 +145,9 @@ bending.ability.earthtunnel.instructions=Hold sneak while looking at an earthben
 bending.ability.lavadisk.description=LavaDisk is an advanced technique initially demonstrated by Ghazan. It allows you to create a lava shuriken that cuts through soft blocks, deals damage to entities and sets them of fire. The closer you are to the LavaDisk the faster it spins and the more damage it deals.
 bending.ability.lavadisk.instructions=Hold sneak while looking at a nearby earthbendable source to select it. Release sneak to launch the ability forward.
 bending.ability.lavadisk.death={0} was cauterized by {1}''s {2}
+bending.ability.lavaflux.description=LavaFlux creates a wave of lava that travels forward leaving scorched earth behind. It can also be used to tear down walls.
+bending.ability.lavaflux.instructions=Hold sneak to release a wave of lava in front of you.
+bending.ability.lavaflux.death={0} was scorched by {1}''s {2}
 bending.ability.metalcable.description=This incredibly versatile ability is used by metalbenders for all purposes. Left click to launch a metal cable. If it connects to an entity
 bending.ability.metalcable.instructions=Left click to launch a metal cable. If it connects to an entity or block, you will be pulled towards it. If you hold sneak, the entity or block will be pulled towards you instead. You can also left click again to throw any grabbed targets towards the direction you are looking at. Thrown blocks act as projectiles that deal damage. You will probably need some form of iron or metal in your inventory to use this ability.
 bending.ability.raiseearth.description=RaiseEarth is a basic yet useful utility move. It has the potential to allow the earthbender to create great escape routes by raising earth underneath them to propel themselves upwards. It also offers synergy with other moves, such as shockwave. RaiseEarth is often used to block incoming abilities.
@@ -157,27 +160,33 @@ bending.ability.firekick.death={0} was kicked to the floor, in flames, from {1}'
 bending.ability.firespin.description=A circular array of fire that causes damage and knockback to nearby enemies.
 bending.ability.firespin.death={0} was caught in {1}''s {2} inferno
 bending.ability.firewheel.description=This ability creates a wheel of fire that travels along the ground leaving a trail of fire behind it.
+bending.ability.firewheel.death={0} was incinerated by {1}''s {2}
 bending.ability.blaze.description=Blaze is a basic firebending technique that can be quite deadly if used right. It is useful to stop others from chasing you or to create space between you and your enemies.
 bending.ability.blaze.instructions=Left click to send a forward moving arc of fire. Alternatively you can tap sneak to send a blaze all around you.
+bending.ability.blaze.death={0} burnt to a crisp in {1}''s {2}
 bending.ability.combustion.description=Combustion is an extremely advanced and powerful firebending ability. It allows you to focus large amounts of energy into your body and then release them in the form of a deadly beam.
 bending.ability.combustion.instructions=Hold sneak to charge and release to create a maneuverable combustion beam. You can left click to detonate early. Be warned, if you take damage while charging, the combustion will explode in your face!
 bending.ability.combustion.death={0} was wiped off the face of the earth by {1}''s {2}
 bending.ability.fireblast.description=This ability is the most fundamental firebending technique and allows you to create a blast of fire at your fingertips. The blast will deal damage, knockback to your target and engulf them in flames. If the blast hits terrain, it will ignite the nearby area.
 bending.ability.fireblast.instructions=Left click to send out a basic FireBlast. You can also hold sneak to charge and release a more powerful version.
-bending.ability.fireblast.death={0} was burnt by {1}''s {2}
+bending.ability.fireblast.death={0} was seared by {1}''s {2}
 bending.ability.firebreath.description=This advanced firebending technique earned Iroh the nickname Dragon of the West. It allows you to exhale a stream of fire that deals damage and lights terrain on fire.
 bending.ability.firebreath.instructions=Hold sneak to release a breath of fire.
 bending.ability.fireburst.description=FireBurst is a very powerful firebending ability that really shines when you are surrounded by multiple enemies.
 bending.ability.fireburst.instructions=Hold sneak to start charging FireBurst until particles appear. Release sneak to create a spherical burst of flames around you. Alternatively you can left click to launch a more powerful burst in a cone area.
+bending.ability.fireburst.death={0} was seared by {1}''s {2}
 bending.ability.firejet.description=FireJet is a fundamental mobility move for firebenders. It allows the firebender to blast fire behind them to propel them forward, which can prevent them from taking fall damage or simply to reposition during a fight.
 bending.ability.firejet.instructions=Left click to propel yourself in the direction you are looking. Hold sneak while clicking to use the more powerful JetBlast mode instead. Left clicking again while flying will cancel the jet.
+bending.ability.firejet.death={1}''s {2} fuel melted {0}
 bending.ability.fireshield.description=FireShield is a basic defensive ability that allows a firebender to block projectiles or other bending abilities. It is also surprisingly good at protecting the bender from explosions!
 bending.ability.fireshield.instructions=Hold sneak to create a fire shield around you. Alternatively, you can left click to create a temporary fire shield. Any entities that step near the fire shield, will be ignited.
+bending.ability.fireshield.death={0} was signed while attacking {1}''s {2}
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
 bending.ability.firewall.instructions=Left click to create a wall of fire that damages nearby entities and deals knockback. Hold sneak to move the wall forward.
 bending.ability.firewall.death={0} run into {1}''s {2}
 bending.ability.flamerush.description=Flamerush is an advanced firebending technique that allows a skilled bender to merge two separate streams of fire into a single powerful attack.
 bending.ability.flamerush.instructions=Hold sneak to charge and release to create a dual fire stream. When smoke particles appear the move is fully charged.
+bending.ability.flamerush.death={0} was reduced to ashes by {1}''s {2}
 bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it is capable of illuminating dark areas, melting snow and even cooking food!
 bending.ability.heatcontrol.instructions=Left click while looking at ice to melt it or fire to extinguish it. Hold sneak while you have raw food your on hand to cook it. While on the HeatControl slot you are immune to fire tick damage. Right click to toggle the light source.
 bending.ability.lightning.description=Lightning is an extremely powerful technique that was originally reserved for members of the Royal family. It allows the firebender to create an arc of electricity that flows towards the target, exploding on impact! If your target is in water the arc will be even deadlier!
@@ -215,6 +224,7 @@ bending.ability.watermanipulation.instructions=Tap sneak while looking at a near
 bending.ability.watermanipulation.death={0} was drowned by {1}''s {2}
 bending.ability.waterring.description=WaterRing is a core ability to all waterbenders. Create a multipurpose rotating ring of water around you that you reuse for different abilities.
 bending.ability.waterring.instructions=Left click at a water source to select it and pull it towards you. Once the ring forms, you can left click to launch shards of ice that deal damage on impact. Left click while sneaking on the WaterRing slot to cancel the ability.
+bending.ability.waterring.death={0} was punctured by {1}''s {2}
 bending.ability.waterspout.description=This ability provides waterbenders a height advantage and allows for easier dodging.
 bending.ability.waterspout.instructions=Left click to activate. Hold jump to go higher or sneak to go lower. To disable this ability, left click once again.
 bending.ability.waterwave.description=This ability provides great mobility to waterbenders by allowing them to surf on a wave of water that can travel over land.
