--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -99,7 +99,7 @@ bending.ability.airpunch.description=Create an imploding gust of air that deals 
 bending.ability.airpunch.instructions=Left click to activate.
 bending.ability.airpunch.death={0} was obliterated by {1}''s {2}
 bending.ability.airscooter.description=AirScooter is a fast means of transportation. It can be used to escape from enemies or confuse them by using air scooter around them.
-bending.ability.airscooter.instructions=Sprint, jump, and left click while in the air to activate.
+bending.ability.airscooter.instructions=Jump and left click while in the air to activate.
 bending.ability.airshield.description=Air Shield is one of the most powerful defensive techniques in existence and can block most bending attacks. It is also useful when you are surrounded by mobs.
 bending.ability.airshield.instructions=Hold sneak to form shield of air around you which blocks projectiles and pushes entities back.
 bending.ability.airspout.description=This ability gives an airbender limited sustained levitation. AirSpout provides a height advantage to escape from mobs, players or just to dodge attacks. This ability is also useful for building as it allows you to reach great heights.
@@ -107,6 +107,8 @@ bending.ability.airspout.instructions=Left click to activate. Hold jump to go hi
 bending.ability.airswipe.description=AirSwipe is the most commonly used damage ability in an airbender''s arsenal. An arc of air will flow from your fingertips towards the direction you are facing, damaging and pushing back anything in its path. This ability will also extinguish fires, cool lava, and cut things like grass, mushrooms, and flowers.
 bending.ability.airswipe.instructions=Left click to activate a basic AirSwipe. You can hold sneak to charge and then release a more powerful version.
 bending.ability.airswipe.death={0} was slashed by {1}''s {2}
+bending.ability.tornado.description=Tornado is one of the most versatile airbending techniques. It creates a swirling vortex of wind capable of displacing and disorienting your opponents. Skilled benders can also use it to scale even the most treacherous terrain.
+bending.ability.tornado.instructions=Hold sneak to gradually form a tornado at the targeted location. Right click to toggle between pulling and pushing.
 bending.ability.densityshift.description=This passive ability allows earthbenders to make a firm landing negating all fall damage on any earthbendable surface.
 bending.ability.earthcling.description=This passive ability allows earthbenders to use their EarthGloves to slow or stop their descent while near a wall made of earthbendable materials.
 bending.ability.earthcling.instructions=Hold sneak while on the EarthGlove slot. If you have a glove available you will completely stop your descent and stay in place, otherwise your will just slow it down.
@@ -127,7 +129,7 @@ bending.ability.earthblast.description=EarthBlast is the most basic earthbending
 bending.ability.earthblast.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch the blast towards your target. You can left click again to redirect the blast. Tap sneak at an enemy''s blast to destroy it.
 bending.ability.earthblast.death={0} was shattered by {1}''s {2}
 bending.ability.earthglove.description=EarthGlove is a versatile technique mastered by Dai Li agents. As a metalbender, you can launch metal clips instead which offer more control over your target.
-bending.ability.earthglove.instructions= Click to launch your glove in a direction. If you hold sneak, the glove will attempt to grab nearby entities, restricting them and bring them back to you. Tap sneak at an enemy''s glove to destroy it.
+bending.ability.earthglove.instructions=Click to launch your glove in a direction. If you hold sneak, the glove will attempt to grab nearby entities, restricting them and bring them back to you. Tap sneak at an enemy''s glove to destroy it.
 bending.ability.earthglove.death={1} punched {0} in the face using {2}
 bending.ability.earthline.description=EarthLine is an advanced earthbending technique with both offensive and utility applications. You can deal damage and knockback to your targets, or you can imprison them and restrict their movement.
 bending.ability.earthline.instructions=Tap sneak while looking at a nearby earthbendable source to select it. Left click to launch a ground line towards your target. Hold sneak to control the flow of the line.
@@ -184,7 +186,7 @@ bending.ability.fireshield.death={0} was signed while attacking {1}''s {2}
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
 bending.ability.firewall.instructions=Left click to create a wall of fire that damages nearby entities and deals knockback. Hold sneak to move the wall forward.
 bending.ability.firewall.death={0} run into {1}''s {2}
-bending.ability.flamerush.description=Flamerush is an advanced firebending technique that allows a skilled bender to merge two separate streams of fire into a single powerful attack.
+bending.ability.flamerush.description=FlameRush is an advanced firebending technique that allows a skilled bender to merge two separate streams of fire into a single powerful attack.
 bending.ability.flamerush.instructions=Hold sneak to charge and release to create a dual fire stream. When smoke particles appear the move is fully charged.
 bending.ability.flamerush.death={0} was reduced to ashes by {1}''s {2}
 bending.ability.heatcontrol.description=This fundamental ability allows the firebender to control and manipulate heat. It is extremely useful for ensuring that you are protected from any type of fire. It also offers great utility as it is capable of illuminating dark areas, melting snow and even cooking food!
