Add preset limits

--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -1,7 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 # Commands
 bending.command.preset.list-not-found=No presets found
-bending.command.preset.list.header=Available presets:
+bending.command.preset.list.header=Available presets ({0}):
 bending.command.preset.invalid-name=Invalid preset name, only alphanumeric characters are supported
 bending.command.preset.create-empty=You can''t create an empty preset
 bending.command.preset.hover=Click to bind this preset.
@@ -9,6 +9,7 @@ bending.command.preset.register-success=Successfully created preset {0}
 bending.command.preset.register-exists=Preset {0} already exists
 bending.command.preset.register-cancelled=Creation of preset {0} was cancelled
 bending.command.preset.register-fail=There was an error while saving preset {0}
+bending.command.preset.register-limit=You cannot create more than {0} presets
 bending.command.preset.remove-success=Preset {0} has been removed
 bending.command.preset.remove-fail=Failed to remove preset {0}
 bending.command.preset.bind-success=Successfully bound preset {0}
