Add experimental command to view ability attributes ingame

--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -16,6 +16,8 @@ bending.command.preset.bind-success=Successfully bound preset {0}
 bending.command.preset.bind-fail=No abilities could be bound from preset {0}
 bending.command.modifier.add=Successfully added modifier to {0}
 bending.command.modifier.clear=Cleared attribute modifiers for {0}
+bending.command.attribute.list.header={0} attributes:
+bending.command.attribute.list.empty=No attributes found for {0}
 bending.command.toggle.on=Your bending has been toggled on
 bending.command.toggle.off=Your bending has been toggled off
 bending.command.reload=Bending has been reloaded
