Fixed typo in FireShield death message

--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -190,7 +190,7 @@ bending.ability.firejet.instructions=Left click to propel yourself in the direct
 bending.ability.firejet.death={1}''s {2} fuel melted {0}
 bending.ability.fireshield.description=FireShield is a basic defensive ability that allows a firebender to block projectiles or other bending abilities. It is also surprisingly good at protecting the bender from explosions!
 bending.ability.fireshield.instructions=Hold sneak to create a fire shield around you. Alternatively, you can left click to create a temporary fire shield. Any entities that step near the fire shield, will be ignited.
-bending.ability.fireshield.death={0} was signed while attacking {1}''s {2}
+bending.ability.fireshield.death={0} was singed while attacking {1}''s {2}
 bending.ability.firewall.description=FireWall is an advanced firebending technique that can be used for multiple purposes. It is incredibly useful when trying to block off opponents from chasing you or to back them into corners.
 bending.ability.firewall.instructions=Left click to create a wall of fire that damages nearby entities and deals knockback. Hold sneak to move the wall forward.
 bending.ability.firewall.death={0} run into {1}''s {2}
