--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -1,7 +1,14 @@
 # suppress inspection "UnusedProperty" for whole file
 # Commands
+bending.command.parse.ability=Could not find ability {0}
+bending.command.parse.preset=Could not find preset {0}
+bending.command.parse.user=Could not find user {0}
+bending.command.description=Base command for bending
+bending.command.preset.description=Bending subcommand for presets
+bending.command.preset.list.description=List all available presets
 bending.command.preset.list-not-found=No presets found
 bending.command.preset.list.header=Available presets ({0}):
+bending.command.preset.create.description=Create a new preset
 bending.command.preset.invalid-name=Invalid preset name, only alphanumeric characters are supported
 bending.command.preset.create-empty=You can''t create an empty preset
 bending.command.preset.hover=Click to bind this preset.
@@ -10,51 +17,70 @@ bending.command.preset.register-exists=Preset {0} already exists
 bending.command.preset.register-cancelled=Creation of preset {0} was cancelled
 bending.command.preset.register-fail=There was an error while saving preset {0}
 bending.command.preset.register-limit=You cannot create more than {0} presets
+bending.command.preset.remove.description=Remove an existing preset
 bending.command.preset.remove-success=Preset {0} has been removed
 bending.command.preset.remove-fail=Failed to remove preset {0}
+bending.command.preset.bind.description=Bind an existing preset
 bending.command.preset.bind-success=Successfully bound preset {0}
 bending.command.preset.bind-fail=No abilities could be bound from preset {0}
+bending.command.modifier.description=Bending subcommand for modifiers
+bending.command.modifier.add.description=Add a new modifier to the specified user
 bending.command.modifier.add=Successfully added modifier to {0}
+bending.command.modifier.clear.description=Clear all existing modifiers for a user
 bending.command.modifier.clear=Cleared attribute modifiers for {0}
+bending.command.attribute.description=View all available attribute values for a specific ability
 bending.command.attribute.list.header={0} attributes:
 bending.command.attribute.list.empty=No attributes found for {0}
+bending.command.toggle.description=Toggle bending
 bending.command.toggle.on=Your bending has been toggled on
 bending.command.toggle.off=Your bending has been toggled off
+bending.command.reload.description=Reload bending systems
 bending.command.reload=Bending has been reloaded
 bending.command.element.toast-notification=You can now bend {0}
+bending.command.element.choose.description=Choose an element
 bending.command.element.choose-no-permission=You don''t have permission to choose the element of {0}
 bending.command.element.choose-success=Your bending was set to the element of {0}
 bending.command.element.choose-fail=Failed to choose the element of {0}
+bending.command.element.add.description=Add an element
 bending.command.element.add-no-permission=You don''t have permission to add the element of {0}
 bending.command.element.add-success=You now have the element of {0}
 bending.command.element.add-fail=You already have the element of {0}
+bending.command.element.remove.description=Remove an element
 bending.command.element.remove-success=You no longer have the element of {0}
 bending.command.element.remove-fail=Failed to remove the element of {0}
+bending.command.board.description=Toggle bending board visibility
 bending.command.board.disabled=Bending Board is disabled
 bending.command.board.on=Toggled bending board on
 bending.command.board.off=Toggled bending board off
+bending.command.display.description=View all bound abilities
 bending.command.display.abilities-header=List of {0} abilities:
 bending.command.display.abilities-not-found=No abilities found for {0}
 bending.command.display.abilities=Abilities:
 bending.command.display.sequences=Sequences:
 bending.command.display.passives=Passives:
 bending.command.display.ability-hover=Click to view info about a specific ability.
+bending.command.bind.description=Bind an ability to a slot
 bending.command.bind.require-element={0} requires the element of {1}
 bending.command.bind.success=Successfully bound {0} to slot {1}
 bending.command.bind.fail={0} cannot be bound to a slot
 bending.command.bind.no-permission=You do not have permission to bind {0}
 bending.command.binds.header={0}''s bound abilities:
 bending.command.binds.no-elements=No elements
+bending.command.clear.description=Clear an ability slot
 bending.command.clear.all=Cleared all slots
 bending.command.clear.specific=Cleared ability slot {0}
+bending.command.help.description=View info about an element, ability or command
 bending.command.info.empty=No description or instructions found for {0}
 bending.command.info.description={0} description: {1}
 bending.command.info.instructions={0} instructions: {1}
+bending.command.version.description=View version info about bending
 bending.command.version.hover=Developer: {0}\nLicense: {1}\nSource code: {2}
 bending.command.version.hover.open-link=Click to open link.
-bending.command.backup.running=A backup process is already running, try again later"
+bending.command.export.description=Export all saved data
+bending.command.backup.running=A backup process is already running, try again later
 bending.command.export.progress=Exporting user data... {0}% complete
 bending.command.export.success=Exported user data to {0} in {1}s
+bending.command.import.description=Import data from file
 bending.command.import.progress=Importing user data... {0}% complete
 bending.command.import.success=Imported user data in {0}s
 # Board
