Allow canceling waterwave

--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -263,4 +263,4 @@ bending.ability.waterring.death={0} was punctured by {1}''s {2}
 bending.ability.waterspout.description=This ability provides waterbenders a height advantage and allows for easier dodging.
 bending.ability.waterspout.instructions=Left click to activate. Hold jump to go higher or sneak to go lower. To disable this ability, left click once again.
 bending.ability.waterwave.description=This ability provides great mobility to waterbenders by allowing them to surf on a wave of water that can travel over land.
-bending.ability.waterwave.instructions=While you have a WaterRing available, hold sneak until the ring condenses and forms a wave which transports you in the direction you are looking. Left click once to cancel the ability. You can left click on PhaseChange slot to freeze the wave, slowing and damaging nearby targets.
+bending.ability.waterwave.instructions=While you have a WaterRing available, hold sneak until the ring condenses and forms a wave which transports you in the direction you are looking. Sneak again to cancel the ability. You can left click on PhaseChange slot to freeze the wave, slowing and damaging nearby targets.
