--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -147,8 +147,8 @@ bending.ability.earthcling.description=This passive ability allows earthbenders 
 bending.ability.earthcling.instructions=Hold sneak while on the EarthGlove slot. If you have a glove available you will completely stop your descent and stay in place, otherwise your will just slow it down.
 bending.ability.ferrocontrol.description=This passive ability allows metalbenders to control various metal objects such as iron doors/trapdoors and minecarts.
 bending.ability.ferrocontrol.instructions=Right click an iron door or trapdoor to open/close it. Hold sneak while looking at a minecart to control it.
-bending.ability.locksmithing.description=This passive ability allows metalbenders to forge keys out of various metals and lock containers.
-bending.ability.locksmithing.instructions=Right click a container using an ingot to create a key and lock it. Hold sneak while right clicking with a valid key to remove the lock.
+bending.ability.locksmithing.description=This passive ability allows metalbenders to forge keys out of various metals and unlock containers.
+bending.ability.locksmithing.instructions=Right click a locked container using any metal ingot to open it.
 bending.ability.earthpillars.description=This ability will raise pillars under nearby entities. The pillars will deal damage and launch them flying in the air. You can also activate this ability by falling from a great height while having the Catapult slot selected.
 bending.ability.earthshards.description=Shatter your EarthGloves into multiple fragments that deal damage to any target hit.
 bending.ability.earthshards.death={0} died from internal bleeding caused by {1}''s {2}
