Add entity type registry tags and bloodbending

--- a/common/src/main/resources/bending/lang/messages_en.properties
+++ b/common/src/main/resources/bending/lang/messages_en.properties
@@ -229,6 +229,8 @@ bending.ability.lightning.instructions=Hold sneak to generate lightning arcs unt
 bending.ability.lightning.death={0} was deep-fried by {1}''s {2}
 bending.ability.fastswim.description=This passive ability allows waterbenders to swim faster.
 bending.ability.hydrosink.description=This passive enables waterbenders to softly land on any waterbendable surface. negating all fall damage.
+bending.ability.bloodbending.description=Bloodbending is a special waterbending technique, so powerful that it was made illegal. In the absence of other water sources, a skilled bender may manipulate the blood of their enemies.
+bending.ability.bloodbending.instructions=Hold sneak to start controlling your target. Release sneak to stop and recover your stamina. You can attack while actively bloodbending to attempt and disarm your enemy. Right click to toggle between single and multi target mode.
 bending.ability.frostbreath.description=Skilled waterbenders are able to freeze their breath as they exhale, freezing water into ice and slowing down nearby entities.
 bending.ability.frostbreath.instructions=Hold sneak to release a breath of ice.
 bending.ability.iceberg.description=Given a large enough source of water or ice, a master waterbender is able to form a vast spike of ice capable of drilling through blocks.
